--- a/package.json
+++ b/package.json
@@ -37,5 +37,13 @@
     "jest": "^22.3.0",
     "supertest": "^3.1.0",
     "nodemon": "^1.18.3"
-  }
+  },
+    "jest": {
+      "moduleNameMapper": {
+        "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+          "<rootDir>/test/__mocks__/fileMock.js",
+        "\\.(css|less)$": "<rootDir>/public/styles.css"
+      }
+    }
+  
 }
