--- a/package.json
+++ b/package.json
@@ -47,9 +47,15 @@
     "supertest": "^3.1.0"
   },
   "jest": {
+    "verbose": true,
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/public/styles.css"
-    }
+      "\\.(css|scss)$": "<rootDir>/test/config/style.js"
+    },
+    "resolver": null,
+    "setupTestFrameworkScriptFile": "<rootDir>/test/setup.js",
+    "testMatch": [
+      "**/client/components/**/*.test.js",
+      "**/test/*.js"
+    ]
   }
 }
