--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-jest": "^23.4.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^3.5.0",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.1.0",
@@ -44,6 +45,7 @@
     "nodemon": "^1.18.3",
     "puppeteer": "^1.6.0",
     "sinon": "1.17.3",
+    "style-loader": "^0.21.0",
     "supertest": "^3.1.0"
   },
   "jest": {
