--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.0",
+    "babel-preset-airbnb": "^2.5.2",
     "babel-preset-env": "^1.7.0",
     "chai": "^3.5.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-standard": "^2.1.6",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-react": "^7.10.0",
     "faker": "^4.1.0",
     "jest": "^22.4.4",
     "mocha": "2.3.3",
