--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "webpack -d --watch",
     "start": "nodemon ./server/server.js",
-    "seed": "node ./seed/dataGenerator.js"
+    "seed": "node ./seed/dataGenerator.js",
+    "reset-db-ci": "mysql -u root < ./database/schema.sql"
   },
   "keywords": [],
   "author": "Christopher Wildenradt",
