--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack -d --watch",
     "start": "nodemon ./server/server.js",
     "seed": "node ./seed/dataGenerator.js",
-    "reset-db-ci": "mysql -u root < ./database/schema.sql"
+    "reset-db-ci": "mysql -u root < schema.sql"
   },
   "keywords": [],
   "author": "Christopher Wildenradt",
