--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "chart.js": "^2.7.2",
+    "chartjs": "^0.3.24",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.2.0",
     "webpack": "^3.11.0"
   },
