attempt fix of CircleCi server tests

--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ jobs:
           MYSQL_DB: reviews
           MYSQL_USER: root
           MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_PASSWORD:
+          MYSQL_PASSWORD: ''
       - image: circleci/mysql:5.7
         environment:
           MYSQL_USER: root
