--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.11.0"
