--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module for Reviews like OpenTable",
   "main": "app.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "webpack -d --watch",
     "start": "nodemon ./server/server.js",
     "seed": "node ./seed/dataGenerator.js",
