--- a/package.json
+++ b/package.json
@@ -49,13 +49,15 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "faker": "^4.1.0",
+    "grunt": "^1.0.3",
     "jest": "^22.4.4",
     "mocha": "2.3.3",
     "nodemon": "^1.18.3",
     "puppeteer": "^1.6.0",
     "sinon": "1.17.3",
     "style-loader": "^0.21.0",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "grunt-contrib-uglify": "~0.5.0"
   },
   "jest": {
     "verbose": true,
