--- a/circle.yml
+++ b/circle.yml
@@ -12,11 +12,12 @@ jobs:
           MYSQL_HOST: 127.0.0.1
           MYSQL_DB: reviews
           MYSQL_USER: root
-          MYSQL_PASSWORD: mysqlsucks
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_PASSWORD:
       - image: circleci/mysql:5.7
         environment:
           MYSQL_USER: root
-          MYSQL_PASSWORD: mysqlsucks
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
