--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --coverage",
-    "build": "webpack -d --watch",
-    "start": "nodemon ./server/server.js",
+    "build": "webpack -p",
+    "start": "node ./server/server.js & node ./seed/dataGenerator.js",
     "seed": "node ./seed/dataGenerator.js",
     "reset-db-ci": "mysql -u root < schema.sql"
   },
@@ -15,10 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
@@ -27,33 +23,35 @@
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "nodemon": "^1.18.3",
+    "faker": "^4.1.0",
     "webpack": "^3.11.0"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.0",
-    "babel-preset-airbnb": "^2.5.2",
-    "babel-preset-env": "^1.7.0",
-    "chai": "^3.5.0",
-    "css-loader": "^1.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-airbnb-standard": "^2.1.6",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
-    "faker": "^4.1.0",
-    "grunt": "^1.0.3",
-    "jest": "^22.4.4",
-    "mocha": "2.3.3",
-    "nodemon": "^1.18.3",
-    "puppeteer": "^1.6.0",
-    "sinon": "1.17.3",
-    "style-loader": "^0.21.0",
-    "supertest": "^3.1.0",
-    "grunt-contrib-uglify": "~0.5.0"
+    "devDependencies": {
+      "babel-loader": "^7.1.2",
+      "babel-preset-es2015": "^6.24.1",
+      "babel-preset-react": "^6.24.1",
+      "babel-core": "^6.26.3",
+      "babel-jest": "^23.4.0",
+      "babel-preset-airbnb": "^2.5.2",
+      "babel-preset-env": "^1.7.0",
+      "chai": "^3.5.0",
+      "css-loader": "^1.0.0",
+      "enzyme": "^3.3.0",
+      "enzyme-adapter-react-16": "^1.1.1",
+      "eslint": "^4.19.1",
+      "eslint-config-airbnb": "^17.0.0",
+      "eslint-config-airbnb-standard": "^2.1.6",
+      "eslint-plugin-import": "^2.13.0",
+      "eslint-plugin-jsx-a11y": "^6.1.1",
+      "eslint-plugin-react": "^7.10.0",
+      "grunt": "^1.0.3",
+      "grunt-contrib-uglify": "~0.5.0",
+      "jest": "^22.4.4",
+      "mocha": "2.3.3",
+      "sinon": "1.17.3",
+      "style-loader": "^0.21.0",
+      "supertest": "^3.1.0"
   },
   "jest": {
     "verbose": true,
