--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "Reviews",
   "version": "1.0.0",
   "description": "Module for Reviews like OpenTable",
-  "main": "app.js",
+  "main": "bundle.js",
   "scripts": {
     "test": "jest --coverage",
-    "build": "webpack -p",
-    "start": "node ./server/server.js & node ./seed/dataGenerator.js",
+    "build": "webpack -d --watch",
+    "start": "nodemon ./server/server.js",
     "seed": "node ./seed/dataGenerator.js",
-    "reset-db-ci": "mysql -u root < schema.sql"
+    "reset-db-ci": "mysql -u root < schema.sql",
+    "grunt": "grunt s3"
   },
   "keywords": [],
   "author": "Christopher Wildenradt",
@@ -18,40 +19,41 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
+    "grunt-aws": "^0.6.2",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "nodemon": "^1.18.3",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "nodemon": "^1.18.3",
-    "faker": "^4.1.0",
     "webpack": "^3.11.0"
   },
-    "devDependencies": {
-      "babel-loader": "^7.1.2",
-      "babel-preset-es2015": "^6.24.1",
-      "babel-preset-react": "^6.24.1",
-      "babel-core": "^6.26.3",
-      "babel-jest": "^23.4.0",
-      "babel-preset-airbnb": "^2.5.2",
-      "babel-preset-env": "^1.7.0",
-      "chai": "^3.5.0",
-      "css-loader": "^1.0.0",
-      "enzyme": "^3.3.0",
-      "enzyme-adapter-react-16": "^1.1.1",
-      "eslint": "^4.19.1",
-      "eslint-config-airbnb": "^17.0.0",
-      "eslint-config-airbnb-standard": "^2.1.6",
-      "eslint-plugin-import": "^2.13.0",
-      "eslint-plugin-jsx-a11y": "^6.1.1",
-      "eslint-plugin-react": "^7.10.0",
-      "grunt": "^1.0.3",
-      "grunt-contrib-uglify": "~0.5.0",
-      "jest": "^22.4.4",
-      "mocha": "2.3.3",
-      "sinon": "1.17.3",
-      "style-loader": "^0.21.0",
-      "supertest": "^3.1.0"
+  "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.0",
+    "babel-preset-airbnb": "^2.5.2",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^3.5.0",
+    "css-loader": "^1.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-airbnb-standard": "^2.1.6",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "grunt": "^1.0.3",
+    "grunt-contrib-uglify": "~0.5.0",
+    "jest": "^22.4.4",
+    "mocha": "2.3.3",
+    "sinon": "1.17.3",
+    "style-loader": "^0.21.0",
+    "supertest": "^3.1.0"
   },
   "jest": {
     "verbose": true,
