--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "test": "jest --coverage",
-    "build": "webpack -d --watch",
+    "build": "webpack -p --watch",
     "start": "nodemon ./server/server.js",
     "seed": "node ./seed/dataGenerator.js",
     "reset-db-ci": "mysql -u root < schema.sql",
