--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "grunt-aws": "^0.6.2",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
+    "faker": "^4.1.0",
     "faker.js": "2.0.0",
     "grunt": "^1.0.3",
     "grunt-contrib-uglify": "~0.5.0",
